Return typescript model names without package prefix
