# pkg/domain/review.go
@@ -28,4 +28,4 @@ type Review struct {
 	CreatedAt  time.Time `db:"created_at"`
 	UpdatedAt  time.Time `db:"updated_at"`
 	ArchivedAt null.Time `db:"archived_at" validate:"optional"`
-}
+} // @name Review
